# minicbor-embedded-io

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yaml
src/: lib.rs  reader.rs  writer.rs
src/reader/: asynch.rs  direct.rs  mod.rs
