[package]
name = "minicbor-embedded-io"
version = "0.1.0"
edition = "2021"

[features]
alloc = []

[dependencies]
defmt = { version = "0.3", optional = true }
embedded-io-async = "0.6"
minicbor = "0.20"
futures-intrusive = { version = "0.5", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
