[package]
name = "minicbor-embedded-io"
version = "0.4.0"
edition = "2021"
description = "Async reader and writer types for minicbor"
readme = "README.md"
repository = "https://github.com/rmja/minicbor-embedded-io"
authors = ["Rasmus Melchior Jacobsen <rmja@laesoe.org>"]
license = "MIT / Apache-2.0"
keywords = ["embedded", "cbor", "minicbor", "embedded-io", "async"]
exclude = [".github"]

[features]
alloc = []
allocator_api = ["alloc"]

[dependencies]
defmt = { version = "0.3", optional = true }
embedded-io-async = "0.6"
minicbor = "0.26"
futures-intrusive = { version = "0.5", default-features = false }

[dev-dependencies]
critical-section = { version = "1", features = ["std"] }
embassy-sync = "0.6"
minicbor = { version = "0.26", features = ["alloc"] }
tokio = { version = "1", features = ["macros", "rt"] }
